--- a/github_creategist_html.html
+++ b/github_creategist_html.html
@@ -19,31 +19,35 @@
         </div>
 
 
-        <div class="page-header">
-          <h1>Repositories</h1>
-        </div>
-        <div class="row">
+ <div class="row">
           <div class="col-sm-8">
             <div class="panel panel-default">
               <div class="panel-heading">
-                <h3 class="panel-title">Crear Repos</h3>
+                <h3 class="panel-title">Create a new Repository</h3>
               </div>
               <div class="panel-body">
-			  <div class="input-group input-group-sm">
+
+                <div class="input-group input-group-sm">
                   <span class="input-group-addon">Name</span> <input type="text"
-                    class="form-control" id="gist_name_to_create">
+                    class="form-control" id="repository_name_to_create">
                 </div>
 
                 <div class="input-group input-group-sm">
                   <span class="input-group-addon">Description</span> <input
                     type="text" class="form-control" id="description_to_create">
                 </div>
-                 <span id="create_result"></span>
+
+                <span id="create_result"></span>
+
               </div>
             </div>
           </div><!-- /.col-sm-8 -->
           <div class="col-sm-4">
-            <button type="button" class="btn btn-info" id="button_create_repos">Create Repo</button>
+             <button type="button" class="btn btn-info" id="button_to_create">Create Repository</button>
+          </div>
+        </div>
+
+
 			 
             </div>
           </div>
